# AI-GitHub-Code-Reviewer

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_repositories_table.py  003_create_reviews_tables.py  004_add_review_ai_fields.py  005_create_user_settings_table.py  006_add_github_oauth_to_users.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/config/: analysis_config.py  settings.py
backend/app/db/: session.py
backend/app/models/: __init__.py  repository.py  review.py  user.py  user_settings.py
backend/app/repositories/: repository_repository.py  review_repository.py  user_repository.py  user_settings_repository.py
backend/app/schemas/: __init__.py  ai_review.py  analysis.py  auth.py  common.py  repository.py  review_search.py  user_settings.py
backend/app/services/: ai_review_prompt.py  ai_review_service.py  analysis_service.py  auth_service.py  git_service.py  github_oauth_service.py  ollama_service.py  report_service.py  repository_service.py  review_service.py  user_settings_service.py
backend/app/utils/: file_walker.py  github_url.py  scoring.py  security.py
backend/tests/: conftest.py  test_ai_review.py  test_analysis.py  test_auth.py  test_github_oauth.py  test_github_url.py  test_health.py  test_ollama_service.py  test_python_analyzer.py  test_report_service.py  test_repositories.py  test_review_search.py  test_user_settings.py
(+44 files in other folders)
